--- a/index.html
+++ b/index.html
@@ -1,85 +1,79 @@
+
 <!DOCTYPE html>
 <html lang="ro">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tehnologie care îți dă încredere. Soluții care performează.</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/jpeg" href="logo.jpg">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>INNOGLOBAL</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header>
-        <img src="logo.jpg" alt="INNOGLOBAL Logo" class="logo">
-        <nav>
-            <a href="#">Acasă</a>
-            <a href="#servicii">Servicii</a>
-            <a href="#despre">Despre noi</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
-    <main>
-        <section class="hero">
-            <h1>Tehnologie care îți dă încredere. Soluții care performează.</h1>
-            <p>INNOGLOBAL este un hub de business dedicat soluțiilor integrate: rețelistică, securitate cibernetică, supraveghere video și energie verde.<br>
-            Lucrăm cu profesioniști. Livrăm rezultate.</p>
-        </section>
-        <section id="servicii">
-            <h2>Serviciile noastre</h2>
-            <p class="subtitle">Oferim soluții complete, personalizate și scalabile, adaptate fiecărui tip de proiect – rezidențial, comercial sau industrial.</p>
-            <div class="service-block">
-                <h3>Rețelistică</h3>
-                <p><strong>Rețele stabile pentru afaceri conectate.</strong></p>
-                <p>Configurăm soluții eficiente de rețelistică – cablate sau wireless – de la design la implementare.</p>
-            </div>
-            <div class="service-block">
-                <h3>Securitate Cibernetică</h3>
-                <p><strong>Protejează-ți datele. Apără-ți afacerea.</strong></p>
-                <p>Audităm, configurăm și asigurăm infrastructura IT împotriva riscurilor cibernetice.</p>
-            </div>
-            <div class="service-block">
-                <h3>Soluții Fotovoltaice</h3>
-                <p><strong>Investiția în energie curată începe cu noi.</strong></p>
-                <p>Proiectăm și instalăm sisteme fotovoltaice fiabile pentru locuințe și afaceri.</p>
-            </div>
-            <div class="service-block">
-                <h3>Supraveghere Video</h3>
-                <p><strong>Control. Protecție. Siguranță.</strong></p>
-                <p>Proiectăm și instalăm sisteme CCTV adaptate nevoilor tale, cu tehnologie de ultimă generație.</p>
-            </div>
-        </section>
-        <section id="despre">
-            <h2>Despre noi</h2>
-            <p><strong>INNOGLOBAL este un hub tehnologic format din profesioniști cu experiență dovedită în telecomunicații, rețelistică, sisteme de supraveghere video și soluții energetice inteligente.</strong></p>
-            <p>Activăm la intersecția dintre inovație și nevoile reale ale clienților, oferind servicii complete – de la consultanță și proiectare până la instalare și suport tehnic. Fiecare membru al echipei are o pregătire solidă și experiență practică în livrarea de soluții pentru clienți din mediul privat, industrial și instituțional.</p>
-            <p>Punem accent pe fiabilitate, scalabilitate și securitate, astfel încât fiecare sistem livrat să funcționeze optim, în orice condiții.</p>
-            <p>✅ Ce ne diferențiază:<br>
-            Gândim soluții complete, nu doar echipamente.<br>
-            Punem accent pe fiabilitate, securitate și simplitate în utilizare.<br>
-            Colaborăm cu o rețea extinsă de specialiști certificați și furnizori consacrați.<br>
-            Răspundem prompt și profesionist – fără compromisuri.</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Sună sau trimite un mesaj și hai să găsim împreună cea mai bună soluție pentru nevoile tale.</p>
-            <form action="https://formspree.io/f/maylnzya" method="POST">
-                <label for="name">Nume:</label>
-                <input type="text" id="name" name="name" required>
+  <header class="navbar">
+    <a href="#acasa">Acasă</a>
+    <a href="#servicii">Servicii</a>
+    <a href="#despre">Despre Noi</a>
+    <a href="#contact">Contact</a>
+  </header>
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required>
+  <section class="hero" id="acasa">
+    <div class="overlay">
+      <h1>Tehnologie care îți dă încredere. Soluții care performează.</h1>
+      <p>INNOGLOBAL este un hub de business dedicat soluțiilor integrate: rețelistică, securitate cibernetică, supraveghere video și energie verde.<br>
+      Lucrăm cu profesioniști. Livrăm rezultate.</p>
+    </div>
+  </section>
 
-                <label for="message">Mesaj:</label>
-                <textarea id="message" name="message" required></textarea>
+  <section id="servicii">
+    <h2>Servicii</h2>
+    <p class="subtitlu">Oferim soluții complete, personalizate și scalabile, adaptate fiecărui tip de proiect – rezidențial, comercial sau industrial.</p>
+    <div class="service-block">
+      <img src="icon-retea.svg" alt="Icon rețea" class="icon">
+      <h3>Rețelistică</h3>
+      <p><strong>Rețele stabile pentru afaceri conectate.</strong></p>
+      <p>Configurăm soluții eficiente de rețelistică – cablate sau wireless – de la design la implementare.</p>
+    </div>
+    <div class="service-block">
+      <img src="icon-securitate.svg" alt="Icon securitate" class="icon">
+      <h3>Securitate Cibernetică</h3>
+      <p><strong>Protejează-ți datele. Apără-ți afacerea.</strong></p>
+      <p>Audităm, configurăm și asigurăm infrastructura IT împotriva riscurilor cibernetice.</p>
+    </div>
+    <div class="service-block">
+      <img src="icon-solar.svg" alt="Icon solar" class="icon">
+      <h3>Soluții Fotovoltaice</h3>
+      <p><strong>Investiția în energie curată începe cu noi.</strong></p>
+      <p>Proiectăm și instalăm sisteme fotovoltaice fiabile pentru locuințe și afaceri.</p>
+    </div>
+    <div class="service-block">
+      <img src="icon-cctv.svg" alt="Icon CCTV" class="icon">
+      <h3>Supraveghere Video</h3>
+      <p><strong>Control. Protecție. Siguranță.</strong></p>
+      <p>Proiectăm și instalăm sisteme CCTV adaptate nevoilor tale, cu tehnologie de ultimă generație.</p>
+    </div>
+  </section>
 
-                <button type="submit">Trimite</button>
-            </form>
-            <p>📧 <a href="mailto:contact@innoglobal.ro">contact@innoglobal.ro</a><br>
-            📞 +40721 127 538<br>
-            📍 București, Romania</p>
-        </section>
-    </main>
-    <footer>
-        <p>&copy; 2025 INNOGLOBAL. Toate drepturile rezervate.</p>
-    </footer>
+  <section id="despre">
+    <h2>Despre Noi</h2>
+    <p><strong>INNOGLOBAL este un hub tehnologic format din profesioniști cu experiență dovedită în telecomunicații, rețelistică, sisteme de supraveghere video și soluții energetice inteligente.</strong></p>
+    <p>Activăm la intersecția dintre inovație și nevoile reale ale clienților, oferind servicii complete – de la consultanță și proiectare până la instalare și suport tehnic. Fiecare membru al echipei are o pregătire solidă și experiență practică în livrarea de soluții pentru clienți din mediul privat, industrial și instituțional.</p>
+    <p>Punem accent pe fiabilitate, scalabilitate și securitate, astfel încât fiecare sistem livrat să funcționeze optim, în orice condiții.</p>
+    <p>✅ Ce ne diferențiază:<br>
+    Gândim soluții complete, nu doar echipamente.<br>
+    Punem accent pe fiabilitate, securitate și simplitate în utilizare.<br>
+    Colaborăm cu o rețea extinsă de specialiști certificați și furnizori consacrați.<br>
+    Răspundem prompt și profesionist – fără compromisuri.</p>
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Sună sau trimite un mesaj și hai să găsim împreună cea mai bună soluție pentru nevoile tale.</p>
+    <form>
+      <input type="text" placeholder="Nume" required>
+      <input type="email" placeholder="Email" required>
+      <textarea placeholder="Mesajul tău..." required></textarea>
+      <button type="submit">Trimite</button>
+    </form>
+    <p>📞 +40721 127 538<br>📍 București, Romania<br>✉️ contact@innoglobal.ro</p>
+  </section>
 </body>
 </html>
