--- a/index.html
+++ b/index.html
@@ -27,26 +27,22 @@
     <h2>Servicii</h2>
     <p class="subtitlu">Oferim soluții complete, personalizate și scalabile, adaptate fiecărui tip de proiect – rezidențial, comercial sau industrial.</p>
     <div class="service-block">
-      <img src="icon-retea.svg" alt="Icon rețea" class="icon">
-      <h3>Rețelistică</h3>
+      <h3>🖧 Rețelistică</h3>
       <p><strong>Rețele stabile pentru afaceri conectate.</strong></p>
       <p>Configurăm soluții eficiente de rețelistică – cablate sau wireless – de la design la implementare.</p>
     </div>
     <div class="service-block">
-      <img src="icon-securitate.svg" alt="Icon securitate" class="icon">
-      <h3>Securitate Cibernetică</h3>
+      <h3>🔐 Securitate Cibernetică</h3>
       <p><strong>Protejează-ți datele. Apără-ți afacerea.</strong></p>
       <p>Audităm, configurăm și asigurăm infrastructura IT împotriva riscurilor cibernetice.</p>
     </div>
     <div class="service-block">
-      <img src="icon-solar.svg" alt="Icon solar" class="icon">
-      <h3>Soluții Fotovoltaice</h3>
+      <h3>🔋 Soluții Fotovoltaice</h3>
       <p><strong>Investiția în energie curată începe cu noi.</strong></p>
       <p>Proiectăm și instalăm sisteme fotovoltaice fiabile pentru locuințe și afaceri.</p>
     </div>
     <div class="service-block">
-      <img src="icon-cctv.svg" alt="Icon CCTV" class="icon">
-      <h3>Supraveghere Video</h3>
+      <h3>🎥 Supraveghere Video</h3>
       <p><strong>Control. Protecție. Siguranță.</strong></p>
       <p>Proiectăm și instalăm sisteme CCTV adaptate nevoilor tale, cu tehnologie de ultimă generație.</p>
     </div>
