--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Sună sau trimite un mesaj și hai să găsim împreună cea mai bună soluție pentru nevoile tale.</p>
-<form name="contact" method="POST" data-netlify="true">
-  <input type="text" name="nume" placeholder="Nume" required>
-  <input type="email" name="email" placeholder="Email" required>
-  <textarea name="mesaj" placeholder="Mesajul tău..." required></textarea>
-  <button type="submit">Trimite</button>
-</form>
+    <form>
+      <input type="text" placeholder="Nume" required>
+      <input type="email" placeholder="Email" required>
+      <textarea placeholder="Mesajul tău..." required></textarea>
+      <button type="submit">Trimite</button>
+    </form>
     <p>📞 +40721 127 538<br>📍 București, Romania<br>✉️ contact@innoglobal.ro</p>
   </section>
 </body>
