--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
   <section class="hero" id="acasa">
     <div class="overlay">
-      <h1>Tehnologie care îți dă încredere. Soluții care performează.</h1>
+      <h1>Tehnologie care îti dă încredere. Soluții care performează.</h1>
       <p>INNOGLOBAL este un hub de business dedicat soluțiilor integrate: rețelistică, securitate cibernetică, supraveghere video și energie verde.<br>
       Lucrăm cu profesioniști. Livrăm rezultate.</p>
     </div>
@@ -26,7 +26,7 @@
     <h2>Servicii</h2>
     <p class="subtitlu">Oferim soluții complete, personalizate și scalabile, adaptate fiecărui tip de proiect – rezidențial, comercial sau industrial.</p>
     <div class="service-block">
-      <h3>🖧 Rețelistică</h3>
+      <h3>🐧 Rețelistică</h3>
       <p><strong>Rețele stabile pentru afaceri conectate.</strong></p>
       <p>Configurăm soluții eficiente de rețelistică – cablate sau wireless – de la design la implementare.</p>
     </div>
@@ -62,7 +62,7 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Sună sau trimite un mesaj și hai să găsim împreună cea mai bună soluție pentru nevoile tale.</p>
-    <form name="contact" method="POST" data-netlify="true">
+    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
       <input type="text" name="nume" placeholder="Nume" required>
       <input type="email" name="email" placeholder="Email" required>
       <textarea name="mesaj" placeholder="Mesajul tău..." required></textarea>
