--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
     <h2>Contact</h2>
     <p>Sună sau trimite un mesaj și hai să găsim împreună cea mai bună soluție pentru nevoile tale.</p>
     <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
+      <input type="hidden" name="form-name" value="contact" />
+      <p class="hidden"><label>Nu completa: <input name="bot-field" /></label></p>
       <input type="text" name="nume" placeholder="Nume" required>
       <input type="email" name="email" placeholder="Email" required>
       <textarea name="mesaj" placeholder="Mesajul tău..." required></textarea>
