--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ro">
 <head>
@@ -16,7 +17,7 @@
 
   <section class="hero" id="acasa">
     <div class="overlay">
-      <h1>Tehnologie care îti dă încredere. Soluții care performează.</h1>
+      <h1>Tehnologie care îți dă încredere. Soluții care performează.</h1>
       <p>INNOGLOBAL este un hub de business dedicat soluțiilor integrate: rețelistică, securitate cibernetică, supraveghere video și energie verde.<br>
       Lucrăm cu profesioniști. Livrăm rezultate.</p>
     </div>
@@ -26,7 +27,7 @@
     <h2>Servicii</h2>
     <p class="subtitlu">Oferim soluții complete, personalizate și scalabile, adaptate fiecărui tip de proiect – rezidențial, comercial sau industrial.</p>
     <div class="service-block">
-      <h3>🐧 Rețelistică</h3>
+      <h3>🖧 Rețelistică</h3>
       <p><strong>Rețele stabile pentru afaceri conectate.</strong></p>
       <p>Configurăm soluții eficiente de rețelistică – cablate sau wireless – de la design la implementare.</p>
     </div>
@@ -62,12 +63,10 @@
   <section id="contact">
     <h2>Contact</h2>
     <p>Sună sau trimite un mesaj și hai să găsim împreună cea mai bună soluție pentru nevoile tale.</p>
-    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field">
-      <input type="hidden" name="form-name" value="contact" />
-      <p class="hidden"><label>Nu completa: <input name="bot-field" /></label></p>
-      <input type="text" name="nume" placeholder="Nume" required>
-      <input type="email" name="email" placeholder="Email" required>
-      <textarea name="mesaj" placeholder="Mesajul tău..." required></textarea>
+    <form>
+      <input type="text" placeholder="Nume" required>
+      <input type="email" placeholder="Email" required>
+      <textarea placeholder="Mesajul tău..." required></textarea>
       <button type="submit">Trimite</button>
     </form>
     <p>📞 +40721 127 538<br>📍 București, Romania<br>✉️ contact@innoglobal.ro</p>
