--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ro">
 <head>
@@ -17,7 +16,7 @@
 
   <section class="hero" id="acasa">
     <div class="overlay">
-      <h1>Tehnologie care îți dă încredere. Soluții care performează.</h1>
+      <h1>Tehnologie care îti dă încredere. Soluții care performează.</h1>
       <p>INNOGLOBAL este un hub de business dedicat soluțiilor integrate: rețelistică, securitate cibernetică, supraveghere video și energie verde.<br>
       Lucrăm cu profesioniști. Livrăm rezultate.</p>
     </div>
@@ -27,7 +26,7 @@
     <h2>Servicii</h2>
     <p class="subtitlu">Oferim soluții complete, personalizate și scalabile, adaptate fiecărui tip de proiect – rezidențial, comercial sau industrial.</p>
     <div class="service-block">
-      <h3>🖧 Rețelistică</h3>
+      <h3>🐧 Rețelistică</h3>
       <p><strong>Rețele stabile pentru afaceri conectate.</strong></p>
       <p>Configurăm soluții eficiente de rețelistică – cablate sau wireless – de la design la implementare.</p>
     </div>
@@ -62,14 +61,14 @@
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Sună sau trimite un mesaj și hai să găsim împreună cea mai bună soluție pentru nevoile tale.</p>
-    <form>
-      <input type="text" placeholder="Nume" required>
-      <input type="email" placeholder="Email" required>
-      <textarea placeholder="Mesajul tău..." required></textarea>
-      <button type="submit">Trimite</button>
-    </form>
-    <p>📞 +40721 127 538<br>📍 București, Romania<br>✉️ contact@innoglobal.ro</p>
+    <div class="contact-container">
+      <p>Ne poți scrie oricând la <strong>contact@innoglobal.ro</strong> și îți vom răspunde în cel mai scurt timp.</p>
+    </div>
+    
+        <div class="contact-container">
+      <p>📞 +40721 127 538<br>📍 București, Romania<br>✉️ contact@innoglobal.ro</p>
+    </div>
+  </section>
   </section>
 </body>
 </html>
